2006-04-25 Stuart Prescott <stuart@nanonanonano.net>
	* bugfix: work around PHP session.auto_start; also allow for externally started sessions (from some CMS framework) and make sure the session cookie is only available to the Bumblebee installation
	* bugfix: change the default mysqldump command line so that it doesn't require grant LOCK TABLES do backup the database under MySQL 4.1 and MySQL 5. 
	* feature: new installer script with error checking on user values and compatability with MySQL5
	* feature: allow admin to reset password and turn on extra login debugging info just using the config file
	* bugfix: user can now change password if email or phone number is not set

2006-03-27 Stuart Prescott <stuart@nanonanonano.net>
	* 1.0.2 release
	* bugfix: calendar display contained duplicate bookings when coming out of daylight saving time

2006-02-06 Stuart Prescott <s.prescott@unimelb.edu.au>
	* 1.0.1 release
	* feature: Cc the logged-in user on billing emails
	* bugfix: viewing consumable usage not updated to new deletion framework
	* bugfix: masquerading class not available to non-sysadmin users
	* bugfix win32: don't use %e in strftime
	* feature: LDAP authentication enabled
	* code docs: comments converted to phpdoc style

2005-09-05 Stuart Prescott <s.prescott@unimelb.edu.au>
	* 1.0.0 release

2005-08-25 Stuart Prescott <s.prescott@unimelb.edu.au>
	* tagged as 0.9.9.4-1.0rc4 
	* help system on sf.net activated
	* allowed user-specified path to mysqldump + options 
	* deletion of objects no longer deletes from database instead uses deleted flag 

2005-08-12 Stuart Prescott <s.prescott@unimelb.edu.au>
	* Fix calendar display so that out-of-slot bookings made by admin don't break grid pattern 
	* Fix booking validation so that non-admin users can make bookings that start or stop at non-slot times if those times but up against another out-of-slot booking 