@@ -1,4 +1,5 @@
 2006-04-25 Stuart Prescott <stuart@nanonanonano.net>
+	* bugfix: assume that a null value for discount means 0. 
 	* bugfix: work around PHP session.auto_start; also allow for externally started sessions (from some CMS framework) and make sure the session cookie is only available to the Bumblebee installation
 	* bugfix: change the default mysqldump command line so that it doesn't require grant LOCK TABLES do backup the database under MySQL 4.1 and MySQL 5. 
 	* feature: new installer script with error checking on user values and compatability with MySQL5
